PayPal Direct and Express: Option for API security protocol (TLS 1.2 required)

--- a/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
@@ -24,6 +24,12 @@
       <LocaleResource Name="TransactMode.Hint">
         <Value>Bestimmen Sie den Transaktionsmodus.</Value>
       </LocaleResource>
+      <LocaleResource Name="SecurityProtocol">
+        <Value>Sicherheitsprotokoll</Value>
+      </LocaleResource>
+      <LocaleResource Name="SecurityProtocol.Hint">
+        <Value>Legt das mit der PayPal-API zu verwendende Sicherheitsprotokoll fest.</Value>
+      </LocaleResource>
       <LocaleResource Name="ApiAccountName">
         <Value>API Benutzername</Value>
       </LocaleResource>
