--- a/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
@@ -6,6 +6,59 @@
   <LocaleResource Name="Plugins.Description.SmartStore.PayPal" AppendRootKey="false">
     <Value>Provides the PayPal payment methods PayPal Express, PayPal Standard and PayPal Direct.</Value>
   </LocaleResource>
+
+  <LocaleResource Name="Plugins.Payments.PayPal" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="UseSandbox">
+        <Value>Use Sandbox</Value>
+      </LocaleResource>
+      <LocaleResource Name="UseSandbox.Hint">
+        <Value>Check the box to enable Sandbox (testing environment).</Value>
+      </LocaleResource>
+      <LocaleResource Name="TransactMode">
+        <Value>Transaction mode</Value>
+      </LocaleResource>
+      <LocaleResource Name="TransactMode.Hint">
+        <Value>Specify the payment transaction mode.</Value>
+      </LocaleResource>
+      <LocaleResource Name="SecurityProtocol">
+        <Value>Security protocol</Value>
+      </LocaleResource>
+      <LocaleResource Name="SecurityProtocol.Hint">
+        <Value>Specifies the security protocol to use with the PayPal API.</Value>
+      </LocaleResource>
+      <LocaleResource Name="ApiAccountName">
+        <Value>API Account Name</Value>
+      </LocaleResource>
+      <LocaleResource Name="ApiAccountName.Hint">
+        <Value>Specify the API account name.</Value>
+      </LocaleResource>
+      <LocaleResource Name="ApiAccountPassword">
+        <Value>API Account Password</Value>
+      </LocaleResource>
+      <LocaleResource Name="ApiAccountPassword.Hint">
+        <Value>Specify the API account password.</Value>
+      </LocaleResource>
+      <LocaleResource Name="Signature">
+        <Value>Signature</Value>
+      </LocaleResource>
+      <LocaleResource Name="Signature.Hint">
+        <Value>Enter the signature.</Value>
+      </LocaleResource>
+      <LocaleResource Name="AdditionalFee">
+        <Value>Additional fee</Value>
+      </LocaleResource>
+      <LocaleResource Name="AdditionalFee.Hint">
+        <Value>Enter additional fee to charge your customers.</Value>
+      </LocaleResource>
+      <LocaleResource Name="AdditionalFeePercentage">
+        <Value>Additional fee. Use percentage.</Value>
+      </LocaleResource>
+      <LocaleResource Name="AdditionalFeePercentage.Hint">
+        <Value>Specifies whether to apply a percentage additional fee to the order total. A fixed value is used if not enabled.</Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
   
 	<LocaleResource Name="Plugins.FriendlyName.Payments.PayPalExpress" AppendRootKey="false">
 		<Value>PayPal Express</Value>
@@ -28,62 +81,14 @@
           <ol>
           <li>Log in to your Premier or Business account.</li>
           <li>Click the Profile subtab.</li>
+          <li>Click <b>Language Encoding</b> and <b>More options</b> and select UTF-8.</li>
           <li>Click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
           <li>Click the <b>Edit IPN Settings</b> button to update your settings.</li>
           <li>Select <b>Receive IPN messages</b> (enabled) and enter the URL of your IPN handler (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalExpress/IPNHandler</b>).</li>
           <li>Click <b>Save</b>, and you should get a message that you have successfully activated IPN.</li>
           </ol>]]>
 		    </Value>
-	    </LocaleResource>
-  
-	    <LocaleResource Name="Fields.UseSandbox">
-		    <Value>Use Sandbox</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.UseSandbox.Hint">
-		    <Value>Check the box to enable Sandbox (testing environment).</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.TransactMode">
-		    <Value>Transaction mode</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.TransactMode.Hint">
-		    <Value>Specify transaction mode.</Value>
-	    </LocaleResource>
-      <LocaleResource Name="SecurityProtocol">
-        <Value>Security protocol</Value>
-      </LocaleResource>
-      <LocaleResource Name="SecurityProtocol.Hint">
-        <Value>Specifies the security protocol to use with the PayPal API.</Value>
-      </LocaleResource>
-	    <LocaleResource Name="Fields.ApiAccountName">
-		    <Value>API Account Name</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.ApiAccountName.Hint">
-		    <Value>Specify API account name.</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.ApiAccountPassword">
-		    <Value>API Account Password</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.ApiAccountPassword.Hint">
-		    <Value>Specify API account password.</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.Signature">
-		    <Value>Signature</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.Signature.Hint">
-		    <Value>Specify signature.</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.AdditionalFee">
-		    <Value>Additional fee</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.AdditionalFee.Hint">
-		    <Value>Enter additional fee to charge your customers.</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.AdditionalFeePercentage">
-		    <Value>Additional fee. Use percentage</Value>
-	    </LocaleResource>
-	    <LocaleResource Name="Fields.AdditionalFeePercentage.Hint">
-		    <Value>Determines whether to apply a percentage additional fee to the order total. A fixed value is used if not enabled.</Value>
-	    </LocaleResource>
+	    </LocaleResource>  
   
 	    <LocaleResource Name="NoModuleLoading">
 		    <Value>PayPal Express module cannot be loaded.</Value>
@@ -112,11 +117,9 @@
 	    <LocaleResource Name="ModeAuth">
 		    <Value>Authorize immediately, debit later</Value>
 	    </LocaleResource>
-
       <LocaleResource Name="SelectionText">
         <Value>or</Value>
       </LocaleResource>
-
       <LocaleResource Name="Fields.DisplayCheckoutButton">
         <Value>Activate checkout button in shopping cart</Value>
       </LocaleResource>
@@ -153,7 +156,6 @@
   <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalDirect" AppendRootKey="false">
     <Value>PayPal Direct</Value>
   </LocaleResource>
-
   <LocaleResource Name="Plugins.Payments.PayPalDirect" AppendRootKey="false">
     <Children>
       <LocaleResource Name="AdminInstruction">
@@ -171,54 +173,13 @@
           <ol>
           <li>Log in to your Premier or Business account.</li>
           <li>Click the Profile subtab.</li>
+          <li>Click <b>Language Encoding</b> and <b>More options</b> and select UTF-8.</li>
           <li>Click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
           <li>Click the <b>Edit IPN Settings</b> button to update your settings.</li>
           <li>Select <b>Receive IPN messages</b> (enabled) and enter the URL of your IPN handler (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalDirect/IPNHandler</b>).</li>
           <li>Click <b>Save</b>, and you should get a message that you have successfully activated IPN.</li>
           </ol>]]>
         </Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.UseSandbox">
-        <Value>Use Sandbox</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.UseSandbox.Hint">
-        <Value>Check the box to enable Sandbox (testing environment).</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.TransactMode">
-        <Value>Transaction mode</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.TransactMode.Hint">
-        <Value>Specify transaction mode.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.ApiAccountName">
-        <Value>API Account Name</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.ApiAccountName.Hint">
-        <Value>Specify API account name.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.ApiAccountPassword">
-        <Value>API Account Password</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.ApiAccountPassword.Hint">
-        <Value>Specify API account password.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.Signature">
-        <Value>Signature</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.Signature.Hint">
-        <Value>Specify signature.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFee">
-        <Value>Additional fee</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFee.Hint">
-        <Value>Enter additional fee to charge your customers.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFeePercentage">
-        <Value>Additional fee. Use percentage</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFeePercentage.Hint">
-        <Value>Determines whether to apply a percentage additional fee to the order total. A fixed value is used if not enabled.</Value>
       </LocaleResource>
       <LocaleResource Name="NoModuleLoading">
         <Value>PayPal Direct module cannot be loaded.</Value>
@@ -263,7 +224,7 @@
           you send to PayPal. Follow these steps to configure your account for PDT:</p>
           <ol>
           <li>Log in to your PayPal account.</li>
-          <li>Click the Profile subtab.</li>
+          <li>Click the <b>Profile</b> subtab.</li>
           <li>Click <b>Website Payment Preferences</b> in the Seller Preferences column.</li>
           <li>Under <b>Auto Return for Website Payments</b>, click the On radio button.</li>
           <li>For the Return URL, enter the URL on your site that will receive the transaction ID posted by PayPal after a customer payment (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalStandard/PDTHandler</b>).</li>
@@ -279,8 +240,9 @@
 	          The second way is to configure your paypal account to activate this service; follow these steps:
 	          <ol>
 	          <li>Log in to your Premier or Business account.</li>
-	          <li>Click the Profile subtab.</li>
-	          <li>Click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
+	          <li>Click the <b>Profile</b> subtab.</li>
+            <li>Click <b>Language Encoding</b> and <b>More options</b> and select UTF-8.</li>
+	          <li>Back to <b>Profile</b> click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
 	          <li>Click the <b>Edit IPN Settings</b> button to update your settings.</li>
 	          <li>Select <b>Receive IPN messages (Enabled)</b> and enter the URL of your IPN handler (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalStandard/IPNHandler</b>).</li>
 	          <li>Click <b>Save</b>, and you should get a message that you have successfully activated IPN.</li>
@@ -291,12 +253,6 @@
       </LocaleResource>
       <LocaleResource Name="Fields.RedirectionTip">
         <Value>After confirmation of the order, you will be redirected straight to PayPal. Please provide your data for online banking.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.UseSandbox">
-        <Value>Use Sandbox</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.UseSandbox.Hint">
-        <Value>Check the box to enable Sandbox (testing environment).</Value>
       </LocaleResource>
       <LocaleResource Name="Fields.BusinessEmail">
         <Value>Business Email</Value>
@@ -321,18 +277,6 @@
       </LocaleResource>
       <LocaleResource Name="Fields.PdtValidateOnlyWarn.Hint">
         <Value>Specifies whether to add an order note if the order total is unequal. Otherwise an error will be logged and the payment status is not updated.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFee">
-        <Value>Additional fee</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFee.Hint">
-        <Value>Enter additional fee to charge your customers.</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFeePercentage">
-        <Value>Additional fee. Use percentage</Value>
-      </LocaleResource>
-      <LocaleResource Name="Fields.AdditionalFeePercentage.Hint">
-        <Value>Determines whether to apply a percentage additional fee to the order total. If not enabled, a fixed value is used.</Value>
       </LocaleResource>
       <LocaleResource Name="Fields.PassProductNamesAndTotals">
         <Value>Transmit product names and unit prices</Value>
