--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
@@ -131,7 +131,7 @@ Text suggestions:<ul>
 		<Value>Updating the payment status</Value>
 	</LocaleResource>
 	<LocaleResource Name="DataFetching.Hint">
-		<Value>Determines the method used to update the payment status.</Value>
+		<Value>Specifies the method used to update the payment status.</Value>
 	</LocaleResource>
 	<LocaleResource Name="DataFetching.Warning">
 		<Value>IPN (instant payment notification) requires valid SSL certificate to be installed on this server. Pay attention that the SSL certificate must be issued by a trusted Certificate Authority, self-signed certificates are not permittted.</Value>
@@ -152,7 +152,7 @@ Text suggestions:<ul>
 		<Value>Payment action</Value>
 	</LocaleResource>
 	<LocaleResource Name="TransactionType.Hint">
-		<Value>Determines when to debit the customer account.</Value>
+		<Value>Specifies when to debit the customer account.</Value>
 	</LocaleResource>
 	<LocaleResource Name="TransactionType.AuthAndCapture">
 		<Value>Immediately debit</Value>
@@ -167,7 +167,7 @@ Text suggestions:<ul>
 		<Value>Apply customer data</Value>
 	</LocaleResource>
 	<LocaleResource Name="SaveEmailAndPhone.Hint">
-		<Value>Determines whether and when the Amazon email address and telephone number of the customer should be saved.</Value>
+		<Value>Specifies whether and when the Amazon email address and telephone number of the customer should be saved.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AmazonPaySaveDataType.OnlyIfEmpty">
 		<Value>Only if empty</Value>
@@ -179,7 +179,7 @@ Text suggestions:<ul>
 		<Value>Show button in mini shopping cart</Value>
 	</LocaleResource>
 	<LocaleResource Name="ShowButtonInMiniShoppingCart.Hint">
-		<Value>Determines to show the "Pay with Amazon" button in the mini shopping cart too.</Value>
+		<Value>Specifies to show the "Pay with Amazon" button in the mini shopping cart too.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddressWidgetWidth">
 		<Value>Width of address widget</Value>
@@ -218,36 +218,36 @@ Text suggestions:<ul>
 		<Value>Additional fee percentage</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdditionalFeePercentage.Hint">
-		<Value>Determines whether to apply a percentage additional fee to the order total. If not enabled, a fixed value is used.</Value>
+		<Value>Specifies whether to apply a percentage additional fee to the order total. If not enabled, a fixed value is used.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddOrderNotes">
 		<Value>Create order notes</Value>
 	</LocaleResource>
 	<LocaleResource Name="AddOrderNotes.Hint">
-		<Value>Determines that order notes should be created in context of the data exchange with Amazon Payments.</Value>
+		<Value>Specifies that order notes should be created in context of the data exchange with Amazon Payments.</Value>
 	</LocaleResource>
 	<LocaleResource Name="PollingTaskMinutes">
 		<Value>Frequency (in minutes)</Value>
 	</LocaleResource>
 	<LocaleResource Name="PollingTaskMinutes.Hint">
-		<Value>Determines how often status of the different object shall be polled from Amazon Payments servers.</Value>
+		<Value>Specifies how often status of the different object shall be polled from Amazon Payments servers.</Value>
 	</LocaleResource>
 	<LocaleResource Name="PollingMaxOrderCreationDays">
 		<Value>Maximal order age (in days)</Value>
 	</LocaleResource>
 	<LocaleResource Name="PollingMaxOrderCreationDays.Hint">
-		<Value>Determines that only orders which are not older than x days to be included in payment data updates.</Value>
+		<Value>Specifies that only orders which are not older than x days to be included in payment data updates.</Value>
 	</LocaleResource>
 	<LocaleResource Name="InformCustomerAboutErrors">
 		<Value>Inform about a refusal of an authorization</Value>
 	</LocaleResource>
 	<LocaleResource Name="InformCustomerAboutErrors.Hint">
-		<Value>Determines to create order notes in case of a declination of an Amazon payment, which are visible for customers too. In addition the customer is informed by email about the case.</Value>
+		<Value>Specifies to create order notes in case of a declination of an Amazon payment, which are visible for customers too. In addition the customer is informed by email about the case.</Value>
 	</LocaleResource>
 	<LocaleResource Name="InformCustomerAddErrors">
 		<Value>Append error message</Value>
 	</LocaleResource>
 	<LocaleResource Name="InformCustomerAddErrors.Hint">
-		<Value>Determines to append the error message to the order note and email.</Value>
+		<Value>Specifies to append the error message to the order note and email.</Value>
 	</LocaleResource>
 </Language>
